{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 167,
  "lineage": "a014046d-044e-39ef-c452-bdb7a726ce64",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d897d255797b4027",
            "association_id": "eipassoc-061a1ea31955a79a2",
            "domain": "vpc",
            "id": "eipalloc-0d897d255797b4027",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a701868aaa3a59bc",
            "private_dns": "ip-10-0-0-199.ec2.internal",
            "private_ip": "10.0.0.199",
            "public_dns": "ec2-34-225-27-170.compute-1.amazonaws.com",
            "public_ip": "34.225.27.170",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-EIP",
              "Owner-Email": "benita201987@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-EIP",
              "Owner-Email": "benita201987@gmail.com"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:032051391204:internet-gateway/igw-01b8c17915a3691d9",
            "id": "igw-01b8c17915a3691d9",
            "owner_id": "032051391204",
            "tags": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "vpc-0416425d322b34de2-IG!",
              "Owner-Email": "benita201987@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "vpc-0416425d322b34de2-IG!",
              "Owner-Email": "benita201987@gmail.com"
            },
            "vpc_id": "vpc-0416425d322b34de2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ext-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:032051391204:loadbalancer/app/ext-alb/e9e341011e17947a",
            "arn_suffix": "app/ext-alb/e9e341011e17947a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ext-alb-698157054.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:032051391204:loadbalancer/app/ext-alb/e9e341011e17947a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ext-alb",
            "security_groups": [
              "sg-00e4e6b6dc494f046"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-055509879b05c6d65"
              },
              {
                "subnet_id": "subnet-0aea69f34ee0a45e6"
              }
            ],
            "subnets": [
              "subnet-055509879b05c6d65",
              "subnet-0aea69f34ee0a45e6"
            ],
            "tags": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-ext-alb",
              "Owner-Email": "benita201987@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-ext-alb",
              "Owner-Email": "benita201987@gmail.com"
            },
            "vpc_id": "vpc-0416425d322b34de2",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ext-alb-sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ialb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:032051391204:loadbalancer/app/ialb/58edad8899dc0dab",
            "arn_suffix": "app/ialb/58edad8899dc0dab",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-ialb-334451480.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:032051391204:loadbalancer/app/ialb/58edad8899dc0dab",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ialb",
            "security_groups": [
              "sg-0c6efe9264e292a04"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00de59c8f3a785411"
              },
              {
                "subnet_id": "subnet-0c002af2ca31716ad"
              }
            ],
            "subnets": [
              "subnet-00de59c8f3a785411",
              "subnet-0c002af2ca31716ad"
            ],
            "tags": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-int-alb",
              "Owner-Email": "benita201987@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-int-alb",
              "Owner-Email": "benita201987@gmail.com"
            },
            "vpc_id": "vpc-0416425d322b34de2",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:032051391204:listener/app/ialb/58edad8899dc0dab/0eedcbef9d044498",
            "certificate_arn": "arn:aws:acm:us-east-1:032051391204:certificate/77048fb9-6a6e-4a4c-8f3f-39eb3a6b84f2",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:032051391204:targetgroup/wordpress-tgt/d0b85bbd36936ee7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:032051391204:listener/app/ialb/58edad8899dc0dab/0eedcbef9d044498",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:032051391204:loadbalancer/app/ialb/58edad8899dc0dab",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.project_terraform",
            "aws_acm_certificate_validation.project_terraform",
            "aws_lb.ialb",
            "aws_lb_target_group.wordpress-tgt",
            "aws_route53_record.project_terraform",
            "aws_security_group.int-alb-sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.project_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "tooling-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:032051391204:targetgroup/tooling-tgt/faf88f5404858203",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:032051391204:listener-rule/app/ialb/58edad8899dc0dab/0eedcbef9d044498/875d1435a5b6df83",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "tooling.bossladies.click"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:032051391204:listener-rule/app/ialb/58edad8899dc0dab/0eedcbef9d044498/875d1435a5b6df83",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:032051391204:listener/app/ialb/58edad8899dc0dab/0eedcbef9d044498",
            "priority": 99,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.project_terraform",
            "aws_acm_certificate_validation.project_terraform",
            "aws_lb.ialb",
            "aws_lb_listener.web-listener",
            "aws_lb_target_group.tooling-tgt",
            "aws_lb_target_group.wordpress-tgt",
            "aws_route53_record.project_terraform",
            "aws_security_group.int-alb-sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.project_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:032051391204:targetgroup/nginx-tgt/fb9bf67430b41ff6",
            "arn_suffix": "targetgroup/nginx-tgt/fb9bf67430b41ff6",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:032051391204:targetgroup/nginx-tgt/fb9bf67430b41ff6",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0416425d322b34de2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tooling-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:032051391204:targetgroup/tooling-tgt/faf88f5404858203",
            "arn_suffix": "targetgroup/tooling-tgt/faf88f5404858203",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:032051391204:targetgroup/tooling-tgt/faf88f5404858203",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tooling-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0416425d322b34de2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:032051391204:targetgroup/wordpress-tgt/d0b85bbd36936ee7",
            "arn_suffix": "targetgroup/wordpress-tgt/d0b85bbd36936ee7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:032051391204:targetgroup/wordpress-tgt/d0b85bbd36936ee7",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "wordpress-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0416425d322b34de2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d897d255797b4027",
            "connectivity_type": "public",
            "id": "nat-04b32e199e1fa7635",
            "network_interface_id": "eni-0a701868aaa3a59bc",
            "private_ip": "10.0.0.199",
            "public_ip": "34.225.27.170",
            "subnet_id": "subnet-0aea69f34ee0a45e6",
            "tags": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-Nat",
              "Owner-Email": "benita201987@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-Nat",
              "Owner-Email": "benita201987@gmail.com"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-rtb-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01b8c17915a3691d9",
            "id": "r-rtb-05a8a50ee53358e9c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05a8a50ee53358e9c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public-rtb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:032051391204:route-table/rtb-08135f5b85e94ad2f",
            "id": "rtb-08135f5b85e94ad2f",
            "owner_id": "032051391204",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-Private-Route-Table",
              "Owner-Email": "benita201987@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-Private-Route-Table",
              "Owner-Email": "benita201987@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0416425d322b34de2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:032051391204:route-table/rtb-05a8a50ee53358e9c",
            "id": "rtb-05a8a50ee53358e9c",
            "owner_id": "032051391204",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01b8c17915a3691d9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-Public-Route-Table",
              "Owner-Email": "benita201987@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-Public-Route-Table",
              "Owner-Email": "benita201987@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0416425d322b34de2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eec7f54183d290f1",
            "route_table_id": "rtb-08135f5b85e94ad2f",
            "subnet_id": "subnet-00de59c8f3a785411"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0f3bf9f5af5a80a",
            "route_table_id": "rtb-08135f5b85e94ad2f",
            "subnet_id": "subnet-0c002af2ca31716ad"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8c400db74114b71",
            "route_table_id": "rtb-08135f5b85e94ad2f",
            "subnet_id": "subnet-0de52d9b7404e956a"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080a077e0d6ef2f6e",
            "route_table_id": "rtb-08135f5b85e94ad2f",
            "subnet_id": "subnet-014e0fb38eeb29b4a"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07dde654a30b4dcb5",
            "route_table_id": "rtb-05a8a50ee53358e9c",
            "subnet_id": "subnet-0aea69f34ee0a45e6"
          },
          "dependencies": [
            "aws_route_table.public-rtb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05867bc6e41b33151",
            "route_table_id": "rtb-05a8a50ee53358e9c",
            "subnet_id": "subnet-055509879b05c6d65"
          },
          "dependencies": [
            "aws_route_table.public-rtb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:032051391204:security-group/sg-098daa426f5bbbd87",
            "description": "Allow incoming HTTP connections.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098daa426f5bbbd87",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc_web_sg",
            "name_prefix": "",
            "owner_id": "032051391204",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Bastion-SG",
              "Owner-Email": "benita201987@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Bastion-SG",
              "Owner-Email": "benita201987@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0416425d322b34de2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "datalayer-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:032051391204:security-group/sg-0fd356e7ad83655ee",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd356e7ad83655ee",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06a4ca09fe8e8ccbe"
                ],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06a4ca09fe8e8ccbe",
                  "sg-098daa426f5bbbd87"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "datalayer-sg",
            "name_prefix": "",
            "owner_id": "032051391204",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "datalayer-sg",
              "Owner-Email": "benita201987@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "datalayer-sg",
              "Owner-Email": "benita201987@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0416425d322b34de2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ext-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:032051391204:security-group/sg-00e4e6b6dc494f046",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00e4e6b6dc494f046",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ext-alb-sg",
            "name_prefix": "",
            "owner_id": "032051391204",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ext-alb-sg",
              "Owner-Email": "benita201987@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ext-alb-sg",
              "Owner-Email": "benita201987@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0416425d322b34de2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "int-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:032051391204:security-group/sg-0c6efe9264e292a04",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c6efe9264e292a04",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f403cdb2c6cc7be4"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "my-alb-sg",
            "name_prefix": "",
            "owner_id": "032051391204",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "int-alb-sg",
              "Owner-Email": "benita201987@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "int-alb-sg",
              "Owner-Email": "benita201987@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0416425d322b34de2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:032051391204:security-group/sg-0f403cdb2c6cc7be4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f403cdb2c6cc7be4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-098daa426f5bbbd87"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00e4e6b6dc494f046"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "nginx-sg",
            "name_prefix": "",
            "owner_id": "032051391204",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "nginx-SG",
              "Owner-Email": "benita201987@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "nginx-SG",
              "Owner-Email": "benita201987@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0416425d322b34de2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:032051391204:security-group/sg-06a4ca09fe8e8ccbe",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a4ca09fe8e8ccbe",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-098daa426f5bbbd87"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c6efe9264e292a04"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "my-asg-sg",
            "name_prefix": "",
            "owner_id": "032051391204",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "webserver-sg",
              "Owner-Email": "benita201987@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "webserver-sg",
              "Owner-Email": "benita201987@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0416425d322b34de2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-bastion-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 22,
            "id": "sgrule-2361831999",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f403cdb2c6cc7be4",
            "self": false,
            "source_security_group_id": "sg-098daa426f5bbbd87",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-ialb-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 443,
            "id": "sgrule-2013697183",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c6efe9264e292a04",
            "self": false,
            "source_security_group_id": "sg-0f403cdb2c6cc7be4",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 3306,
            "id": "sgrule-1793304823",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fd356e7ad83655ee",
            "self": false,
            "source_security_group_id": "sg-098daa426f5bbbd87",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.datalayer-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 3306,
            "id": "sgrule-1000073115",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fd356e7ad83655ee",
            "self": false,
            "source_security_group_id": "sg-06a4ca09fe8e8ccbe",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.datalayer-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nfs-port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 2049,
            "id": "sgrule-2824697617",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fd356e7ad83655ee",
            "self": false,
            "source_security_group_id": "sg-06a4ca09fe8e8ccbe",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.datalayer-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nginx-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 443,
            "id": "sgrule-3064974806",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f403cdb2c6cc7be4",
            "self": false,
            "source_security_group_id": "sg-00e4e6b6dc494f046",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ext-alb-sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 443,
            "id": "sgrule-3013876750",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06a4ca09fe8e8ccbe",
            "self": false,
            "source_security_group_id": "sg-0c6efe9264e292a04",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 22,
            "id": "sgrule-104443882",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06a4ca09fe8e8ccbe",
            "self": false,
            "source_security_group_id": "sg-098daa426f5bbbd87",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:032051391204:subnet/subnet-00de59c8f3a785411",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00de59c8f3a785411",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "032051391204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "PrivateSubnet-0",
              "Owner-Email": "benita201987@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "PrivateSubnet-0",
              "Owner-Email": "benita201987@gmail.com"
            },
            "vpc_id": "vpc-0416425d322b34de2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:032051391204:subnet/subnet-0c002af2ca31716ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c002af2ca31716ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "032051391204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "PrivateSubnet-1",
              "Owner-Email": "benita201987@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "PrivateSubnet-1",
              "Owner-Email": "benita201987@gmail.com"
            },
            "vpc_id": "vpc-0416425d322b34de2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:032051391204:subnet/subnet-0de52d9b7404e956a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de52d9b7404e956a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "032051391204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "PrivateSubnet-2",
              "Owner-Email": "benita201987@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "PrivateSubnet-2",
              "Owner-Email": "benita201987@gmail.com"
            },
            "vpc_id": "vpc-0416425d322b34de2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:032051391204:subnet/subnet-014e0fb38eeb29b4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014e0fb38eeb29b4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "032051391204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "PrivateSubnet-3",
              "Owner-Email": "benita201987@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "PrivateSubnet-3",
              "Owner-Email": "benita201987@gmail.com"
            },
            "vpc_id": "vpc-0416425d322b34de2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:032051391204:subnet/subnet-0aea69f34ee0a45e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aea69f34ee0a45e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "032051391204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "PublicSubnet-0",
              "Owner-Email": "benita201987@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "PublicSubnet-0",
              "Owner-Email": "benita201987@gmail.com"
            },
            "vpc_id": "vpc-0416425d322b34de2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:032051391204:subnet/subnet-055509879b05c6d65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055509879b05c6d65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "032051391204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "PublicSubnet-1",
              "Owner-Email": "benita201987@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "032051391204",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "PublicSubnet-1",
              "Owner-Email": "benita201987@gmail.com"
            },
            "vpc_id": "vpc-0416425d322b34de2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:032051391204:vpc/vpc-0416425d322b34de2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0966ff6907aa5a02a",
            "default_route_table_id": "rtb-0ea091c1cb2dead3c",
            "default_security_group_id": "sg-0d6da881ff0205069",
            "dhcp_options_id": "dopt-08da6133d63624d6e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0416425d322b34de2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ea091c1cb2dead3c",
            "owner_id": "032051391204"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}